# mulang

./: .gitattributes  CMakeLists.txt  Makefile  README.md  ast.h  lexer.l  main.cpp  parser.y  test.mu  test2.mu  yyvaltype.cpp  yyvaltype.h  µt8.h
docs/: old_syntax_ideas.mu
docs/preprocessor/: main.mu  math.mu
include/Mu/: CMakeLists.txt  MuDialect.h  MuDialect.td  MuMLIRGen.h  MuOps.h  MuOps.td  MuPasses.h  MuPasses.td  MuTypes.h  MuTypes.td
include/Mu/Parser/: ast.h  astenums.h  yyvaltype.h
include/Mu/Support/: µt8.h
lib/: CMakeLists.txt
lib/Mu/: CMakeLists.txt  MuDialect.cpp  MuMLIRGen.cpp  MuOps.cpp  MuPasses.cpp  MuTypes.cpp
lib/Mu/Parser/: lexer.l  parser.y  yyvaltype.cpp
scripts/: muc_driver
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  test2_ret.mu  test2_unary.mu
test/Mu/: BlackScholes.mu  binops.mu  bitwise.mu  boolops.mu  dupFuncError.mu  filenotfound.mu  gh-copilot.mu  ifop.mu  initializers.mu  initializers2.mu  lit.local.cfg  main.mu  mojoify.⚛  parenthesis.mu  parser_smoketest.mu  return.mu  symbolTable.mu  unary.mu
tmp_tests/: test2.mu  test2_unary.mu  test3.mu  test_func.mu
